removing preview features from POM file