@@ -96,7 +96,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs> dash dash enable-preview</compilerArgs> -->
                 </configuration>
             </plugin>
 
